# powerline-gitstatus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
powerline_gitstatus/: __init__.py  segments.py
