[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerline-gitstatus"
description = "A Powerline segment for showing the status of a Git working copy" 
version = "1.3.3"
keywords = ["powerline git status prompt"]
license = {text = "MIT License"}
authors = [
    {name = "Jasper N. Brouwer", email = "jasper@nerdsweide.nl"},
]
maintainers = [
    {name ="Jérôme Charaoui", email = "jerome@riseup.net"},
]
classifiers  = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Terminals"
]

[project.urls]
Homepage = "https://github.com/jaspernbrouwer/powerline-gitstatus"
Repository = "https://github.com/jaspernbrouwer/powerline-gitstatus.git"
Issues = "https://github.com/jaspernbrouwer/powerline-gitstatus"
